--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,24 @@
-<h1>Make your form here</h1>
+<h1>Enter Pirate Info</h1>
+
+<form method="POST" action="/pirates">
+  <label name="pirate[name]">Pirate Name:</label>
+    <input type="text" name="pirate[name]">
+  <label name="pirate[weight]">Pirate Weight:</label>
+    <input type="text" name="pirate[weight]">
+  <label name="pirate[height]">Pirate Height:</label>
+    <input type="text" name="pirate[height]">
+  <h2>Pirate's Ships</h2>
+  <p><label name="pirate[ships][][name]">Ship Name:</label>
+    <input type="text" name="pirate[ships][][name]" id="ship_name_1">
+  <label name="pirate[ships][][type]">Ship Type:</label>
+    <input type="text" name="pirate[ships][][type]" id="ship_type_1">
+  <label name="pirate[ships][][booty]">Ship Booty:</label>
+    <input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></p>
+  <p><label name="pirate[ships][][name]">Ship Name:</label>
+    <input type="text" name="pirate[ships][][name]" id="ship_name_2">
+  <label name="pirate[ships][][type]">Ship Type:</label>
+    <input type="text" name="pirate[ships][][type]" id="ship_type_2">
+  <label name="pirate[ships][][booty]">Ship Booty:</label>
+    <input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></p>
+  <input type="submit" name="Submit" id="Submit">
+</form>
