--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,14 +1,17 @@
 
-<h1><%= @pirate.name %></h1>
+<h1>Pirate Name: <%= @pirate.name %></h1>
 <ul>
-<li><%= @pirate.height %></li>
-<li><%= @pirate.weight %></li>
-</ul>
+<li>Height: <%= @pirate.height %></li>
+<li>Weight: <%= @pirate.weight %></li>
+
 
 <% @ships.each do |ship| %>
-    <h2><%= ship.name %></h2>
     <ul>
-    <li><%= ship.booty %></li>
+    <li><h2>Ship Name: <%= ship.name %></h2></li>
+    <ul>
+    <li>Ship type: <%= ship.type %></li>
+    <li>Ship booty:<%= ship.booty %></li>
+    </ul>
     </ul>
 <% end %>
-
+</ul>
