--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -5,11 +5,17 @@
   <input type="text" name="pirate[weight]">
   <label for="pirate[height]">Pirate Height: </label> 
   <input type="text" name="pirate[height]">
-  <label for="pirate[ships][][name]">Ship Name: </label> 
-  <input type="text" name="pirate[ships][][name]">
-  <label for="pirate[ships][][type]">Ship Type: </label>
-  <input type="text" name="pirate[ships][][type]">
-  <label for="pirate[ships][][booty]">Ship Booty: </label> 
-  <input type="text" name="pirate[ships][][booty]">
-  <input type="submit">
+  <label for="pirate[ships][][name]">Ship Name 1: </label> 
+  <input type="text" name="pirate[ships][][name]" id="ship_name_1">
+  <label for="pirate[ships][][type]">Ship Type 1: </label>
+  <input type="text" name="pirate[ships][][type]" id="ship_type_1">
+  <label for="pirate[ships][][booty]">Ship Booty 1: </label> 
+  <input type="text" name="pirate[ships][][booty]" id="ship_booty_1">
+  <label for="pirate[ships][][name]">Ship Name 2: </label> 
+  <input type="text" name="pirate[ships][][name]" id="ship_name_2">
+  <label for="pirate[ships][][type]">Ship Type 2: </label>
+  <input type="text" name="pirate[ships][][type]" id="ship_type_2">
+  <label for="pirate[ships][][booty]">Ship Booty 2: </label> 
+  <input type="text" name="pirate[ships][][booty]" id="ship_booty_2">
+  <button type="submit">Submit</button>
 </form>
