--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,4 @@
-<h1>Make your form here</h1>
+<form method="POST" action="/pirates">
+  <p>Pirate <input type="name" name="name"></p>
+  <input type="submit">
+</form>
